tests/errors/sem.expected-constant.func-return-type.or
main :: () -> void {
    x := int;
    () -> x {
        return 10;
    };
};
